--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // Better IDE support for annotations (so Android Studio interacts better with Dagger)
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
@@ -43,4 +46,6 @@ ext {
     rxjavaVersion = '1.1.3'
     rxandroidVersion = '1.1.0'
     okhttpVersion = '3.2.0'
+    retrofitVersion = '2.0.2'
+    daggerVersion = '2.0'
 }
