--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,17 @@
             android:name=".ui.shortcuts.ShortcutsActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.DemoActivity"/>
+
+        <activity android:name=".ui.edit.EditActivity" >
         </activity>
     </application>
 
